--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ django-filter==24.2
 djangorestframework==3.15.1
 kombu==5.3.7
 Markdown==3.6
+mysqlclient==2.2.4
 prompt-toolkit==3.0.43
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2024.1
